# rust-slack-bot

./: Cargo.toml  README.md  wrangler.toml
src/: lib.rs  model.rs
src/adapter/: github.rs  slack.rs
src/domain/model/: github.rs  routes.rs  slack.rs
src/driver/: routes.rs
src/model/: routes.rs  slack.rs
