[package]
name = "slack-bot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.18"
serde_qs = "0.13.0"
regex = "1.10.5"
serde_json = "1.0.120"
serde = { version ="1.0.203", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["json"] }
chrono = { version = "0.4.38", features = ["serde"] }

#[profile.release]
#opt-level = "s" # optimize for size in release builds
#lto = true
#strip = true
#codegen-units = 1
